feat(core): 完成single publicSingle接口
